package com.shopping;

public class Product {
    private String id;
    private String name;
    private double price;
    private int quantity;

    // Constructor
    public Product(String id, String name, double price, int quantity) {
        this.id = id;
        this.name = name;
        this.price = price;
        this.quantity = quantity;
    }

    // Getters and Setters
    public String getId() { return id; }
    public String getName() { return name; }
    public double getPrice() { return price; }
    public int getQuantity() { return quantity; }

    public void setQuantity(int quantity) { this.quantity = quantity; }
    
    // Display product information
    public void displayProduct() {
        System.out.println("Product ID: " + id + ", Name: " + name + ", Price: $" + price + ", Quantity: " + quantity);
    }
}